cabal-version: 3.8

name: buttdemon
version: 0.1.0.0
synopsis: Bindings to the Open Asset Import Library, a.k.a. Assimp.
license: MIT
license-file: LICENSE
author: Matthew Stewart
maintainer: m.scott.stewart@gmail.com
category: Graphics
build-type: Simple

common common
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    CApiFFI
    CPP
    DataKinds
    DuplicateRecordFields
    PatternSynonyms
    TypeApplications
    ViewPatterns
  if impl(ghc >= 9.0.2)
    default-extensions:
      NoFieldSelectors

library
  import: common
  hs-source-dirs: src
  pkgconfig-depends: assimp
  include-dirs: include
  build-tool-depends: hsc2hs:hsc2hs
  hsc2hs-options: -t template-hsc.h
  build-depends:
    base >=4.9,
--    storable-offset
  exposed-modules:
    Graphics.Formats.Assimp.Config
--    Graphics.Formats.Assimp.Defs
--    Graphics.Formats.Assimp.Animation
--    Graphics.Formats.Assimp.Camera
--    Graphics.Formats.Assimp.Config
--    Graphics.Formats.Assimp.Export
--    Graphics.Formats.Assimp.FileIO
--    Graphics.Formats.Assimp.Import
--    Graphics.Formats.Assimp.ImporterDesc
--    Graphics.Formats.Assimp.Light
--    Graphics.Formats.Assimp.Material
--    Graphics.Formats.Assimp.Mesh
--    Graphics.Formats.Assimp.Metadata
--    Graphics.Formats.Assimp.PostProcess
--    Graphics.Formats.Assimp.Scene
--    Graphics.Formats.Assimp.Texture
--    Graphics.Formats.Assimp.Types
--    Graphics.Formats.Assimp.Version

executable buttdemon-sandbox
  import: common
  hs-source-dirs: app
  main-is: ButtdemonSandbox.hs
  build-depends:
    buttdemon,
    base

source-repository head
  type: git
  location: https://github.com/rotaerk/buttdemon
  subdir: buttdemon
