cabal-version: 3.8

name: buttdemon
version: 0.1.0.0
synopsis: Bindings to the Open Asset Import Library, a.k.a. Assimp.
license: MIT
license-file: LICENSE
author: Matthew Stewart
maintainer: m.scott.stewart@gmail.com
category: Graphics
build-type: Simple

flag swig
  description: Compatible with Assimp builds where SWIG is #defined.
  default: False

flag doublePrecision
  description: Compatible with Assimp builds where ASSIMP_DOUBLE_PRECISION is #defined.
  default: False

common common
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    CApiFFI
    CPP
    DataKinds
    DuplicateRecordFields
    FlexibleInstances
    FunctionalDependencies
    KindSignatures
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeSynonymInstances
    ViewPatterns
  if impl(ghc >= 9.0.2)
    default-extensions:
      NoFieldSelectors

library
  import: common
  hs-source-dirs: src
  pkgconfig-depends: assimp
  include-dirs: include
  build-tool-depends: hsc2hs:hsc2hs
  hsc2hs-options: -t template-hsc.h
  build-depends:
    base >=4.9
  exposed-modules:
    Foreign.Allocable
    Foreign.Offset
    Graphics.Formats.Assimp.AABB
    Graphics.Formats.Assimp.Anim
    Graphics.Formats.Assimp.Camera
    Graphics.Formats.Assimp.CExport
    Graphics.Formats.Assimp.Color4D
    Graphics.Formats.Assimp.Config
    Graphics.Formats.Assimp.Defs
    Graphics.Formats.Assimp.Matrix3x3
    Graphics.Formats.Assimp.Matrix4x4
    Graphics.Formats.Assimp.Quaternion
    Graphics.Formats.Assimp.Texture
    Graphics.Formats.Assimp.Types
    Graphics.Formats.Assimp.Vector2D
    Graphics.Formats.Assimp.Vector3D
  if flag(swig)
    cpp-options: -DSWIG
    cc-options: -DSWIG
  if flag(doublePrecision)
    cpp-options: -DASSIMP_DOUBLE_PRECISION
    cc-options: -DASSIMP_DOUBLE_PRECISION

executable buttdemon-sandbox
  import: common
  hs-source-dirs: app
  main-is: ButtdemonSandbox.hs
  build-depends:
    buttdemon,
    base >= 4.18

source-repository head
  type: git
  location: https://github.com/rotaerk/buttdemon
  subdir: buttdemon
