cabal-version: 3.8

name: buttdemon
version: 0.1.0.0
synopsis: Bindings to the Open Asset Import Library, a.k.a. Assimp.
license: MIT
license-file: LICENSE
author: Matthew Stewart
maintainer: m.scott.stewart@gmail.com
category: Graphics
build-type: Simple
extra-source-files:
  include/**/*.h

flag swig
  description: Compatible with Assimp builds where SWIG is #defined.
  default: False

flag doublePrecision
  description: Compatible with Assimp builds where ASSIMP_DOUBLE_PRECISION is #defined.
  default: False

common common
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    CApiFFI
    CPP
    DataKinds
    DuplicateRecordFields
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    KindSignatures
    MagicHash
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeSynonymInstances
    ViewPatterns
  if impl(ghc >= 9.0.2)
    default-extensions:
      NoFieldSelectors
  build-depends: base >=4.9

library
  import: common
  hs-source-dirs: src
  pkgconfig-depends: assimp
  include-dirs: include
  build-tool-depends: hsc2hs:hsc2hs
  hsc2hs-options: -t template-hsc.h -i functions-hsc.h
  exposed-modules:
    Data.IntWord
    Foreign.Allocable
    Foreign.Offset
    Graphics.Formats.Assimp.AABB
    Graphics.Formats.Assimp.Anim
    Graphics.Formats.Assimp.Camera
    Graphics.Formats.Assimp.CExport
    Graphics.Formats.Assimp.CFileIO
    Graphics.Formats.Assimp.CImport
    Graphics.Formats.Assimp.Color4D
    Graphics.Formats.Assimp.CommonMetadata
    Graphics.Formats.Assimp.Config
    Graphics.Formats.Assimp.Defs
    Graphics.Formats.Assimp.GltfMaterial
    Graphics.Formats.Assimp.ImporterDesc
    Graphics.Formats.Assimp.Light
    Graphics.Formats.Assimp.Material
    Graphics.Formats.Assimp.Matrix3x3
    Graphics.Formats.Assimp.Matrix4x4
    Graphics.Formats.Assimp.Metadata
    Graphics.Formats.Assimp.Mesh
    Graphics.Formats.Assimp.Node
    Graphics.Formats.Assimp.PostProcess
    Graphics.Formats.Assimp.Quaternion
    Graphics.Formats.Assimp.Scene
    Graphics.Formats.Assimp.Texture
    Graphics.Formats.Assimp.Types
    Graphics.Formats.Assimp.Vector2D
    Graphics.Formats.Assimp.Vector3D
    Graphics.Formats.Assimp.Version
  if flag(swig)
    cpp-options: -DSWIG
    cc-options: -DSWIG
  if flag(doublePrecision)
    cpp-options: -DASSIMP_DOUBLE_PRECISION
    cc-options: -DASSIMP_DOUBLE_PRECISION

source-repository head
  type: git
  location: https://github.com/rotaerk/buttdemon
  subdir: buttdemon
